sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:13: error: not found: value inv
      	inv=1
        ^AlgCombSort:15: error: missing arguments for method | in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    while(ecart>1 | inv=1){
                  ^AlgCombSort:15: error: not found: value inv
    while(ecart>1 | inv=1){
                    ^