sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var i:Int=0
  var lgr:Int=getNombreValeurs()
  var ecart=lgr
  if (ecart>1){
    ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
    i=0
    while (i+ecart < lgr){
      if(getValeur(i)>getValeur(i+1))
        echange(i,i+ecart)
        i+=1
      	inv=1
      }
    while(ecart>1 | inv=1){
      
    }
    } 
  }